Overlay style tweaks & fixes such as preventing scrolling of underlying content on mobile

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -9,4 +9,5 @@ main {
 
 .d2l-shim-body-overflow {
 	overflow: hidden;
+	position: fixed;
 }
